stopping footer icon overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ transform: rotate(360deg);
 #footer p{
     padding-top:3px;
     padding-left:10px;
-    width:100px;
+    width:120px;
 }
 
 .socialImg{
@@ -606,4 +606,5 @@ transform: rotate(360deg);
 #footerImgContainer{
     float:right;
     width:150px;
+    margin-right:20px;
 }
